# django-blog-app

./: README.md  pyproject.toml
blog/: db.sqlite3
blog/blog/: settings.py  urls.py
blog/blog_app/: admin.py  forms.py  models.py  urls.py  views.py
blog/blog_app/migrations/: 0001_initial.py  0002_alter_post_image_comment.py  0002_remove_post_last_updated_at_post_updated_at_and_more.py  0003_remove_comment_post_comment_comment_post_and_more.py  0004_remove_comment_parent.py  0005_comment_active_alter_comment_comment_post.py  0006_rename_comment_post_comment_post.py  0007_alter_comment_author.py
blog/blog_app/templates/: base.html  index.html  post_detail.html
